[package]
name = "flatline"
version = "0.0.2"
edition = "2021"
license = "Apache-2.0"
description = "ssh-2.0 library"
keywords = [ "ssh", "tokio" ]
repository = "https://github.com/Zhou-Pixel/flatline.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2"
async-trait = "0.1"
bcrypt-pbkdf = "0.10"
bitflags = "2.4"
byteorder = "1.5"
bytes = "1.5"
derive-new = "0.6"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
indexmap = "2"
num_enum = "0.7.2"
openssl = { version = "0.10.63" }
shadow-rs = "0.27.1"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "io-util", "rt", "macros", "fs", "sync"] }


[features]
openssl-vendored = [ "openssl/vendored" ]
default = [ "openssl-vendored" ]

[build-dependencies]
shadow-rs = "0.27.1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
