[package]
name = "flatline"
version = "0.0.7"
edition = "2021"
license = "Apache-2.0"
description = "ssh-2.0 client library"
keywords = [ "ssh", "tokio", "async" ]
repository = "https://github.com/Zhou-Pixel/flatline.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bcrypt-pbkdf = "0.10"
bitflags = "2.4"
bytes = "1.5"
derive-new = "0.6"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
indexmap = "2"
openssl = { version = "0.10.63" }
thiserror = "1.0"
tokio = { version = "1", features = ["io-util", "rt", "macros"] }
kanal ={ git ="https://github.com/Zhou-Pixel/kanal.git", rev = "2b333b0b5fb8e3ba3a66fce33b6d0fad6b078476" }
# kanal ={ path = "../kanal"}

[features]
openssl-vendored = [ "openssl/vendored" ]
default = [ "openssl-vendored" ]
async-compatible = []



[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
