[package]
name = "flatline"
version = "0.0.10"
edition = "2021"
license = "Apache-2.0"
description = "ssh-2.0 client library"
keywords = [ "ssh", "tokio", "async" ]
categories = [ "asynchronous" ]
repository = "https://github.com/Zhou-Pixel/flatline.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bcrypt-pbkdf = "0.10"
bitflags = "2.4"
bytes = "1.5"
custom_debug_derive = "0.6"
derive-new = "0.6"
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
indexmap = "2"
openssl = { version = "0.10.63" }
snafu = "0.8"
tokio = { version = "1", features = ["io-util", "rt", "macros", "sync"] }


[features]
openssl-vendored = [ "openssl/vendored" ]
default = [ "openssl-vendored" ]
backtrace = [ "snafu/backtrace" ]



[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
